[package]
name = "rama-proxy"
version = "1.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
rama = { path = "vendor/rama", features = ["dns", "socks5", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "net", "time", "io-util"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[patch.crates-io]
rama-tls-rustls = { path = "vendor/rama-tls-rustls" }
